--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,5 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
-brain-even = "brain_games.scripts.brain_even:main"
-brain-calc = "brain_games.scripts.brain_calc:main"
+brain-even = "brain_games.scripts.brain_even:is_even"
+brain-calc = "brain_games.scripts.brain_calc:calc"
