refactor: add folder 'games' for game-files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,6 @@ build-backend = "poetry.core.masonry.api"
 
 
 [tool.poetry.scripts]
-brain-games = "brain_games.scripts.brain_games:main"
-brain-even = "brain_games.scripts.brain_even:is_even"
-brain-calc = "brain_games.scripts.brain_calc:calc"
+brain-games = "brain_games.scripts.games.brain_games:main"
+brain-even = "brain_games.scripts.games.brain_even:is_even"
+brain-calc = "brain_games.scripts.games.brain_calc:calc"
