--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.13"
 prompt = "^0.4.1"
+colorama = "^0.4.6"
 
 
 [tool.poetry.group.dev.dependencies]
