feat: add brain-gcd game

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,5 +25,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.games.brain_games:main"
-brain-even = "brain_games.scripts.games.brain_even:is_even"
-brain-calc = "brain_games.scripts.games.brain_calc:calc"
+brain-even = "brain_games.scripts.games.brain_even:main"
+brain-calc = "brain_games.scripts.games.brain_calc:main"
+brain-gcd = "brain_games.scripts.games.brain_gcd:main"
